// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
    disabled={false}
  >
    <input
      checked={null}
      className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
      id="radio1"
      name="radio-group"
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="radio"
      value="1"
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
      fontSize="0.876em"
      fontWeight={400}
      htmlFor="radio1"
      letterSpacing="0px"
    >
      Radio 1
    </label>
  </div>
</div>
`;

exports[` 2`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
    disabled={false}
  >
    <input
      checked={null}
      className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
      id={null}
      name={null}
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="radio"
      value={null}
    />
  </div>
</div>
`;

exports[` 3`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
    disabled={false}
  >
    <input
      checked={null}
      className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
      id="radio1"
      name="radio-group"
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="radio"
      value="1"
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
      fontSize="0.876em"
      fontWeight={400}
      htmlFor="radio1"
      letterSpacing="0px"
    >
      Radio Label
    </label>
  </div>
</div>
`;

exports[` 4`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 iqLncG Radio__RadioWrapper-sc-3ox61a-0 kzzMRw"
    id={null}
    rows={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 jiteLd Radio__InputGroup-sc-3ox61a-3 dyYMNc"
      id={null}
      rows={null}
    >
      <div
        className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
        disabled={false}
      >
        <input
          checked={null}
          className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
          id="default"
          name="states"
          onBlur={null}
          onChange={null}
          onFocus={null}
          type="radio"
          value="default"
        />
        <label
          className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
          fontSize="0.876em"
          fontWeight={400}
          htmlFor="default"
          letterSpacing="0px"
        >
          Default
        </label>
      </div>
      <div
        className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
        disabled={false}
      >
        <input
          checked={true}
          className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
          id="selected"
          name="states"
          onBlur={null}
          onChange={null}
          onFocus={null}
          type="radio"
          value="selected"
        />
        <label
          className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
          fontSize="0.876em"
          fontWeight={400}
          htmlFor="selected"
          letterSpacing="0px"
        >
          Selected
        </label>
      </div>
      <div
        className="Radio__RadioContainer-sc-3ox61a-1 lksOn"
        disabled={true}
      >
        <input
          checked={null}
          className="Radio__RadioInput-sc-3ox61a-2 fEqiTX"
          id="disabled"
          name="states"
          onBlur={null}
          onChange={null}
          onFocus={null}
          tabIndex="-1"
          type="radio"
          value="disabled"
        />
        <label
          className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
          fontSize="0.876em"
          fontWeight={400}
          htmlFor="disabled"
          letterSpacing="0px"
        >
          Disabled
        </label>
      </div>
    </section>
  </section>
</div>
`;

exports[` 5`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 iqLncG Radio__RadioWrapper-sc-3ox61a-0 kzzMRw"
    id={null}
    rows={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 jiteLd Radio__InputGroup-sc-3ox61a-3 dyYMNc"
      id={null}
      rows={null}
    >
      <div
        className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
        disabled={false}
      >
        <input
          checked={null}
          className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
          id="standard"
          name="alignment"
          onBlur={null}
          onChange={null}
          onFocus={null}
          type="radio"
          value="standard"
        />
        <label
          className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
          fontSize="0.876em"
          fontWeight={400}
          htmlFor="standard"
          letterSpacing="0px"
        >
          Standard
        </label>
      </div>
      <div
        className="Radio__RadioContainer-sc-3ox61a-1 jsJuiD"
        disabled={false}
      >
        <input
          checked={null}
          className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
          id="align-right"
          name="alignment"
          onBlur={null}
          onChange={null}
          onFocus={null}
          type="radio"
          value="align-right"
        />
        <label
          className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
          fontSize="0.876em"
          fontWeight={400}
          htmlFor="align-right"
          letterSpacing="0px"
        >
          Right Aligned
        </label>
      </div>
    </section>
  </section>
</div>
`;

exports[` 6`] = `
<div
  className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
  disabled={false}
>
  <input
    checked={true}
    className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
    id={null}
    name={null}
    onBlur={null}
    onChange={null}
    onFocus={null}
    type="radio"
    value={null}
  />
  <label
    className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
    fontSize="0.876em"
    fontWeight={400}
    htmlFor={null}
    letterSpacing="0px"
  >
    Radio
  </label>
</div>
`;

exports[` 7`] = `
Array [
  <div
    className="Bar__BarLayout-sc-1c4axau-1 bRfHqU"
    id={null}
    onClick={null}
  >
    <div
      className="Bar__Slot-sc-1c4axau-0 kEePMd"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-check fa-w-16 fa-2x Icon__StyledIcon-sc-1oa9m1v-1 OvdFF"
        color="success80"
        data-icon="check"
        data-prefix="far"
        focusable="false"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M435.848 83.466L172.804 346.51l-96.652-96.652c-4.686-4.686-12.284-4.686-16.971 0l-28.284 28.284c-4.686 4.686-4.686 12.284 0 16.971l133.421 133.421c4.686 4.686 12.284 4.686 16.971 0l299.813-299.813c4.686-4.686 4.686-12.284 0-16.971l-28.284-28.284c-4.686-4.686-12.284-4.686-16.97 0z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="Bar__Slot-sc-1c4axau-0 bdXCCw"
    >
      <div
        className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
        disabled={false}
      >
        <input
          checked={null}
          className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
          id={null}
          name={null}
          onBlur={null}
          onChange={null}
          onFocus={null}
          type="radio"
          value={null}
        />
        <label
          className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
          fontSize="0.876em"
          fontWeight={400}
          htmlFor={null}
          letterSpacing="0px"
        >
          Brief Label
        </label>
      </div>
    </div>
  </div>,
  <div
    className="Bar__BarLayout-sc-1c4axau-1 bRfHqU"
    id={null}
    onClick={null}
  >
    <div
      className="Bar__Slot-sc-1c4axau-0 kEePMd"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-times fa-w-10 fa-2x Icon__StyledIcon-sc-1oa9m1v-1 fyNWBU"
        color="alert80"
        data-icon="times"
        data-prefix="far"
        focusable="false"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="Bar__Slot-sc-1c4axau-0 bdXCCw"
    >
      <div
        className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
        disabled={false}
      >
        <input
          checked={null}
          className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
          id={null}
          name={null}
          onBlur={null}
          onChange={null}
          onFocus={null}
          type="radio"
          value={null}
        />
        <label
          className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
          fontSize="0.876em"
          fontWeight={400}
          htmlFor={null}
          letterSpacing="0px"
        >
          Radio with a long label because you cannot be concise with your words.
        </label>
      </div>
    </div>
  </div>,
]
`;

exports[` 8`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 jiteLd"
  id={null}
  rows={null}
>
  <div
    className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
    disabled={false}
  >
    <input
      checked={true}
      className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
      id={null}
      name={null}
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="radio"
      value={null}
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
      fontSize="0.876em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0px"
    >
      Selected
    </label>
  </div>
  <div
    className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
    disabled={false}
  >
    <input
      checked={null}
      className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
      id={null}
      name={null}
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="radio"
      value={null}
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
      fontSize="0.876em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0px"
    >
      Unselected
    </label>
  </div>
  <div
    className="Radio__RadioContainer-sc-3ox61a-1 lksOn"
    disabled={true}
  >
    <input
      checked={null}
      className="Radio__RadioInput-sc-3ox61a-2 fEqiTX"
      id={null}
      name={null}
      onBlur={null}
      onChange={null}
      onFocus={null}
      tabIndex="-1"
      type="radio"
      value={null}
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
      fontSize="0.876em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0px"
    >
      Disabled
    </label>
  </div>
</section>
`;

exports[` 9`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 jiteLd"
  id={null}
  rows={null}
>
  <div
    className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
    disabled={false}
  >
    <input
      checked={null}
      className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
      id={null}
      name={null}
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="radio"
      value={null}
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
      fontSize="0.876em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0px"
    >
      Left Aligned
    </label>
  </div>
  <div
    className="Radio__RadioContainer-sc-3ox61a-1 jsJuiD"
    disabled={false}
  >
    <input
      checked={null}
      className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
      id={null}
      name={null}
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="radio"
      value={null}
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
      fontSize="0.876em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0px"
    >
      Right Aligned
    </label>
  </div>
</section>
`;

exports[` 10`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 jiteLd"
  id={null}
  rows={null}
>
  <form
    action={null}
    className="Form__FormWrapper-v2wrel-0 geeIqY"
    method={null}
    onSubmit={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eGbheC Form__FormInputs-v2wrel-3 bZGKXs"
      id={null}
      rows={null}
    >
      <section
        className="Form__FormSection-v2wrel-2 kbyyVh"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 gfzBkI"
          fontSize="1.05em"
          fontWeight={600}
          letterSpacing="0px"
        >
          Radio Group (2 Columns)
        </h6>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 iqLncG Radio__RadioWrapper-sc-3ox61a-0 kzzMRw"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 jKfeIt Radio__InputGroup-sc-3ox61a-3 dyYMNc"
            id={null}
            rows={null}
          >
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
              disabled={false}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
                id="radio-1"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="radio"
                value="1"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio-1"
                letterSpacing="0px"
              >
                Radio 1
              </label>
            </div>
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
              disabled={false}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
                id="radio-2"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="radio"
                value="2"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio-2"
                letterSpacing="0px"
              >
                Radio 2
              </label>
            </div>
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
              disabled={false}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
                id="radio-3"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="radio"
                value="3"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio-3"
                letterSpacing="0px"
              >
                Radio 3
              </label>
            </div>
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
              disabled={false}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
                id="radio-4"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="radio"
                value="4"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio-4"
                letterSpacing="0px"
              >
                Radio 4
              </label>
            </div>
          </section>
        </section>
      </section>
    </section>
  </form>
</section>
`;

exports[` 11`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <form
    action={null}
    className="Form__FormWrapper-v2wrel-0 geeIqY"
    method={null}
    onSubmit={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eGbheC Form__FormInputs-v2wrel-3 bZGKXs"
      id={null}
      rows={null}
    >
      <section
        className="Form__FormSection-v2wrel-2 kbyyVh"
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 iqLncG Radio__RadioWrapper-sc-3ox61a-0 kzzMRw"
          id="group1"
          rows={null}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 kwdraL"
            fontSize="0.876em"
            fontWeight={600}
            letterSpacing="0px"
          >
            Radio Group Label
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 dIbntl"
            fontSize="0.876em"
            fontWeight={400}
            letterSpacing="0px"
          >
            Hang in there, buddy, I'm here to help!
          </p>
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 jiteLd Radio__InputGroup-sc-3ox61a-3 dyYMNc"
            id={null}
            rows={null}
          >
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
              disabled={false}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
                id="radio-1"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="radio"
                value="1"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio-1"
                letterSpacing="0px"
              >
                Radio 1
              </label>
            </div>
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 lksOn"
              disabled={true}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 fEqiTX"
                id="radio-2"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                tabIndex="-1"
                type="radio"
                value="2"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio-2"
                letterSpacing="0px"
              >
                Radio 2 (disabled)
              </label>
            </div>
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
              disabled={false}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
                id="radio-3"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="radio"
                value="3"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio-3"
                letterSpacing="0px"
              >
                Radio 3
              </label>
            </div>
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
              disabled={false}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
                id="radio-4"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="radio"
                value="4"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio-4"
                letterSpacing="0px"
              >
                Radio 4
              </label>
            </div>
          </section>
        </section>
      </section>
    </section>
  </form>
</div>
`;

exports[` 12`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <form
    action={null}
    className="Form__FormWrapper-v2wrel-0 geeIqY"
    method={null}
    onSubmit={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eGbheC Form__FormInputs-v2wrel-3 bZGKXs"
      id={null}
      rows={null}
    >
      <section
        className="Form__FormSection-v2wrel-2 kbyyVh"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 gfzBkI"
          fontSize="1.05em"
          fontWeight={600}
          letterSpacing="0px"
        >
          Knobs
        </h6>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 iqLncG Radio__RadioWrapper-sc-3ox61a-0 kzzMRw"
          id="group1"
          rows={null}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 kwdraL"
            fontSize="0.876em"
            fontWeight={600}
            letterSpacing="0px"
          >
            Input Label
          </p>
          <p
            className="Typography__Paragraph-sc-19auepv-3 dIbntl"
            fontSize="0.876em"
            fontWeight={400}
            letterSpacing="0px"
          >
            Have you been helped yet?
          </p>
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 jiteLd Radio__InputGroup-sc-3ox61a-3 dyYMNc"
            id={null}
            rows={null}
          >
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
              disabled={false}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
                id="radio-1"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="radio"
                value="1"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio-1"
                letterSpacing="0px"
              >
                Radio 1
              </label>
            </div>
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 lksOn"
              disabled={true}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 fEqiTX"
                id="radio-2"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                tabIndex="-1"
                type="radio"
                value="2"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio-2"
                letterSpacing="0px"
              >
                Radio 2 (disabled)
              </label>
            </div>
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
              disabled={false}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
                id="radio-3"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="radio"
                value="3"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio-3"
                letterSpacing="0px"
              >
                Radio 3
              </label>
            </div>
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
              disabled={false}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
                id="radio-4"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="radio"
                value="4"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio-4"
                letterSpacing="0px"
              >
                Radio 4
              </label>
            </div>
          </section>
        </section>
      </section>
    </section>
  </form>
</div>
`;

exports[` 13`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <form
    action={null}
    className="Form__FormWrapper-v2wrel-0 geeIqY"
    method={null}
    onSubmit={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eGbheC Form__FormInputs-v2wrel-3 bZGKXs"
      id={null}
      rows={null}
    >
      <section
        className="Form__FormSection-v2wrel-2 kbyyVh"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 gfzBkI"
          fontSize="1.05em"
          fontWeight={600}
          letterSpacing="0px"
        >
          Checkbox Group (responsive)
        </h6>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 iqLncG Radio__RadioWrapper-sc-3ox61a-0 kzzMRw"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 jiteLd Radio__InputGroup-sc-3ox61a-3 dyYMNc"
            id={null}
            rows={null}
          >
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
              disabled={false}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
                id="radio-1"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="radio"
                value="1"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio-1"
                letterSpacing="0px"
              >
                Radio 1
              </label>
            </div>
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 lksOn"
              disabled={true}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 fEqiTX"
                id="radio-2"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                tabIndex="-1"
                type="radio"
                value="2"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio-2"
                letterSpacing="0px"
              >
                Radio 2 (disabled)
              </label>
            </div>
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
              disabled={false}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
                id="radio-3"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="radio"
                value="3"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio-3"
                letterSpacing="0px"
              >
                Radio 3
              </label>
            </div>
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
              disabled={false}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
                id="radio-4"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="radio"
                value="4"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio-4"
                letterSpacing="0px"
              >
                Radio 4
              </label>
            </div>
          </section>
        </section>
      </section>
    </section>
  </form>
</div>
`;

exports[` 14`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <form
    action={null}
    className="Form__FormWrapper-v2wrel-0 geeIqY"
    method={null}
    onSubmit={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eGbheC Form__FormInputs-v2wrel-3 bZGKXs"
      id={null}
      rows={null}
    >
      <section
        className="Form__FormSection-v2wrel-2 kbyyVh"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 gfzBkI"
          fontSize="1.05em"
          fontWeight={600}
          letterSpacing="0px"
        >
          Checkbox Group (2 columns)
        </h6>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 iqLncG Radio__RadioWrapper-sc-3ox61a-0 kzzMRw"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 jKfeIt Radio__InputGroup-sc-3ox61a-3 dyYMNc"
            id={null}
            rows={null}
          >
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
              disabled={false}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
                id="radio-1"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="radio"
                value="1"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio-1"
                letterSpacing="0px"
              >
                Radio 1
              </label>
            </div>
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 lksOn"
              disabled={true}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 fEqiTX"
                id="radio-2"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                tabIndex="-1"
                type="radio"
                value="2"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio-2"
                letterSpacing="0px"
              >
                Radio 2 (disabled)
              </label>
            </div>
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
              disabled={false}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
                id="radio-3"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="radio"
                value="3"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio-3"
                letterSpacing="0px"
              >
                Radio 3
              </label>
            </div>
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
              disabled={false}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
                id="radio-4"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="radio"
                value="4"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio-4"
                letterSpacing="0px"
              >
                Radio 4
              </label>
            </div>
          </section>
        </section>
      </section>
    </section>
  </form>
</div>
`;

exports[` 15`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <form
    action={null}
    className="Form__FormWrapper-v2wrel-0 geeIqY"
    method={null}
    onSubmit={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eGbheC Form__FormInputs-v2wrel-3 bZGKXs"
      id={null}
      rows={null}
    >
      <section
        className="Form__FormSection-v2wrel-2 kbyyVh"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 gfzBkI"
          fontSize="1.05em"
          fontWeight={600}
          letterSpacing="0px"
        >
          Checkbox Group (3 columns)
        </h6>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 iqLncG Radio__RadioWrapper-sc-3ox61a-0 kzzMRw"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 iAZTTM Radio__InputGroup-sc-3ox61a-3 dyYMNc"
            id={null}
            rows={null}
          >
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
              disabled={false}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
                id="radio-1"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="radio"
                value="1"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio-1"
                letterSpacing="0px"
              >
                Radio 1
              </label>
            </div>
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 lksOn"
              disabled={true}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 fEqiTX"
                id="radio-2"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                tabIndex="-1"
                type="radio"
                value="2"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio-2"
                letterSpacing="0px"
              >
                Radio 2 (disabled)
              </label>
            </div>
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
              disabled={false}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
                id="radio-3"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="radio"
                value="3"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio-3"
                letterSpacing="0px"
              >
                Radio 3
              </label>
            </div>
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
              disabled={false}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
                id="radio-4"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="radio"
                value="4"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio-4"
                letterSpacing="0px"
              >
                Radio 4
              </label>
            </div>
          </section>
        </section>
      </section>
    </section>
  </form>
</div>
`;

exports[` 16`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <form
    action={null}
    className="Form__FormWrapper-v2wrel-0 geeIqY"
    method={null}
    onSubmit={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eGbheC Form__FormInputs-v2wrel-3 bZGKXs"
      id={null}
      rows={null}
    >
      <section
        className="Form__FormSection-v2wrel-2 kbyyVh"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 gfzBkI"
          fontSize="1.05em"
          fontWeight={600}
          letterSpacing="0px"
        >
          Checkbox Group (mixed columns)
        </h6>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 iqLncG Radio__RadioWrapper-sc-3ox61a-0 kzzMRw"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 jKfeIt Radio__InputGroup-sc-3ox61a-3 dyYMNc"
            id={null}
            rows={null}
          >
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
              disabled={false}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
                id="radio-1"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="radio"
                value="1"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio-1"
                letterSpacing="0px"
              >
                Radio 1
              </label>
            </div>
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 lksOn"
              disabled={true}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 fEqiTX"
                id="radio-2"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                tabIndex="-1"
                type="radio"
                value="2"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio-2"
                letterSpacing="0px"
              >
                Radio 2 (disabled)
              </label>
            </div>
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
              disabled={false}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
                id="radio-3"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="radio"
                value="3"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio-3"
                letterSpacing="0px"
              >
                Radio 3
              </label>
            </div>
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
              disabled={false}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
                id="radio-4"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="radio"
                value="4"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio-4"
                letterSpacing="0px"
              >
                Radio 4
              </label>
            </div>
          </section>
        </section>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 iqLncG Radio__RadioWrapper-sc-3ox61a-0 kzzMRw"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 iqLncG Radio__InputGroup-sc-3ox61a-3 dyYMNc"
            id={null}
            rows={null}
          >
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
              disabled={false}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
                id="radio_long"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="radio"
                value="5"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio_long"
                letterSpacing="0px"
              >
                My label is really long so, if I don't wrap nicely, you may want to give me a row all to myself.
              </label>
            </div>
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 kdrtbz"
              disabled={false}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
                id="radio_long2"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="radio"
                value="6"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio_long2"
                letterSpacing="0px"
              >
                Enough with these long labels already...put it on your blog, Shakespeare.
              </label>
            </div>
          </section>
        </section>
      </section>
    </section>
  </form>
</div>
`;

exports[` 17`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <form
    action={null}
    className="Form__FormWrapper-v2wrel-0 geeIqY"
    method={null}
    onSubmit={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 eGbheC Form__FormInputs-v2wrel-3 bZGKXs"
      id={null}
      rows={null}
    >
      <section
        className="Form__FormSection-v2wrel-2 kbyyVh"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 gfzBkI"
          fontSize="1.05em"
          fontWeight={600}
          letterSpacing="0px"
        >
          Checkbox Group (right-aligned)
        </h6>
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 iqLncG Radio__RadioWrapper-sc-3ox61a-0 kzzMRw"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 jKfeIt Radio__InputGroup-sc-3ox61a-3 dyYMNc"
            id={null}
            rows={null}
          >
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 jsJuiD"
              disabled={false}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
                id="radio-1"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="radio"
                value="1"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio-1"
                letterSpacing="0px"
              >
                Radio 1
              </label>
            </div>
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 fdBVEf"
              disabled={true}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 fEqiTX"
                id="radio-2"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                tabIndex="-1"
                type="radio"
                value="2"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio-2"
                letterSpacing="0px"
              >
                Radio 2 (disabled)
              </label>
            </div>
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 jsJuiD"
              disabled={false}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
                id="radio-3"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="radio"
                value="3"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio-3"
                letterSpacing="0px"
              >
                Radio 3
              </label>
            </div>
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 jsJuiD"
              disabled={false}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 kZoAlA"
                id="radio-4"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="radio"
                value="4"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 Jgtkr"
                fontSize="0.876em"
                fontWeight={400}
                htmlFor="radio-4"
                letterSpacing="0px"
              >
                Radio 4
              </label>
            </div>
          </section>
        </section>
      </section>
    </section>
  </form>
</div>
`;
